[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
futures = "0.3.24"
futures-util = "0.3.24"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
rand = "0.8.5"
bytes = "1.2.1"
env_logger = "0.9.1"
log = "0.4.17"
axum = "0.5.16"
async-trait = "0.1.57"
http-problem = { version = "0.2.0", features = ["axum"] }
validator = { version = "0.16.0", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.6.0"
bollard = "0.13"
